--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,10 +1,7 @@
 [docks]
 
-dock_3="Scene,Import"
 dock_3_selected_tab_idx=0
-dock_4="FileSystem"
 dock_4_selected_tab_idx=0
-dock_5="Inspector,Node,History"
 dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
@@ -12,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=351
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -20,8 +17,11 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/textures/characters/character1.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Assets/", "res://Assets/textures/", "res://Assets/textures/characters/")
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
@@ -29,13 +29,14 @@ open_scenes=PackedStringArray()
 current_scene=""
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=[]
+open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd", "res://Scripts/player.gd", "res://Scripts/ui.gd"]
+selected_script="res://Scripts/main.gd"
+open_help=["Object", "PackedScene"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
