--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,7 @@
-list=[]
+list=Array[Dictionary]([{
+"base": &"Node3D",
+"class": &"Customer",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/customer.gd"
+}])
