--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,24 +10,24 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=351
-dock_hsplit_3=-270
+dock_hsplit_3=-387
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/textures/characters/character1.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Assets/", "res://Assets/textures/", "res://Assets/textures/characters/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/characters/", "res://Assets/audio/", "res://Assets/audio/effects/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
-center_split_offset=0
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn")
+current_scene="res://Scenes/customer.tscn"
+center_split_offset=-421
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
@@ -35,8 +35,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd", "res://Scripts/player.gd", "res://Scripts/ui.gd"]
-selected_script="res://Scripts/main.gd"
-open_help=["Object", "PackedScene"]
+selected_script=""
+open_help=["Node", "Object", "PackedScene", "Vector3"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
