curtain, object rotating, textLines

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/characters/", "res://Assets/audio/", "res://Assets/audio/effects/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/textures/curtain2.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/", "res://Assets/textures/characters/", "res://Assets/audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -34,9 +34,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd", "res://Scripts/player.gd", "res://Scripts/ui.gd"]
-selected_script=""
-open_help=["Node", "Object", "PackedScene", "Vector3"]
+open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd", "res://Scripts/object.gd"]
+selected_script="res://Scripts/object.gd"
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
