--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/textures/curtain2.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/", "res://Assets/textures/characters/", "res://Assets/audio/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/audio/effects/curtainClose.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/", "res://Assets/textures/characters/", "res://Assets/audio/", "res://Assets/audio/effects/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn")
-current_scene="res://Scenes/customer.tscn"
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn", "res://Scenes/ui.tscn")
+current_scene="res://Scenes/main.tscn"
 center_split_offset=-421
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,9 +34,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd", "res://Scripts/object.gd"]
-selected_script="res://Scripts/object.gd"
-open_help=[]
+open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/object.gd", "res://Scripts/ui.gd"]
+selected_script="res://Scripts/menu.gd"
+open_help=["Object"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
@@ -47,3 +47,13 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
