--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/audio/effects/paper.mp3")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/audio/effects/paper2.mp3")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/characters/", "res://Assets/audio/", "res://Assets/audio/music/", "res://Assets/audio/effects/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,18 +25,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn", "res://Scenes/menuButtons.tscn")
-current_scene="res://Scenes/menuButtons.tscn"
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn")
+current_scene="res://Scenes/main.tscn"
 center_split_offset=-348
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/menuButtons.gd", "res://Scripts/object.gd", "res://README.md", "res://Scripts/ui.gd"]
-selected_script="res://Scripts/menuButtons.gd"
-open_help=["AudioStreamPlayer", "Object"]
+open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd"]
+selected_script="res://Scripts/main.gd"
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
