size logic, gameplay loop

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 48,
-"folded_lines": Array[int]([24, 40, 85, 96, 99, 102, 116, 122]),
-"h_scroll_position": 31,
-"row": 75,
-"scroll_position": 43.0,
+"column": 22,
+"folded_lines": Array[int]([26, 42, 75, 86, 97, 100, 146, 153, 157, 160]),
+"h_scroll_position": 0,
+"row": 136,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,10 +31,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
-"folded_lines": Array[int]([]),
+"column": 33,
+"folded_lines": Array[int]([35]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 35,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -101,10 +101,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Plain Text"
