--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/audio/effects/paper2.mp3")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/characters/", "res://Assets/audio/", "res://Assets/audio/music/", "res://Assets/audio/effects/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/characters/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,13 +30,12 @@ current_scene="res://Scenes/main.tscn"
 center_split_offset=-348
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd"]
+open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd", "res://README.md"]
 selected_script="res://Scripts/main.gd"
-open_help=[]
+open_help=["@GlobalScope"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
