--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,25 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/characters/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/audio/effects/paper3.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/audio/", "res://Assets/audio/effects/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn")
-current_scene="res://Scenes/main.tscn"
-center_split_offset=-348
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn", "res://Scenes/menuButtons.tscn", "res://Scenes/ui.tscn")
+current_scene="res://Scenes/customer.tscn"
+center_split_offset=-450
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd", "res://README.md"]
-selected_script="res://Scripts/main.gd"
-open_help=["@GlobalScope"]
+open_scripts=["res://Scripts/customer.gd", "res://Scripts/main.gd", "res://Scripts/menuButtons.gd", "res://README.md", "res://Scripts/ui.gd"]
+selected_script="res://Scripts/customer.gd"
+open_help=["@GlobalScope", "BaseButton"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
