--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
-"folded_lines": Array[int]([32, 48, 82, 93, 104, 107, 110, 153, 160, 164, 167, 170, 173]),
+"column": 0,
+"folded_lines": Array[int]([32, 48, 92, 103, 106, 109, 152, 159, 163, 166, 169, 172]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": false,
+"row": 4,
+"scroll_position": 52.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 4,
+"selection_to_column": 27,
+"selection_to_line": 4,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 57,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
+"row": 33,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,10 +91,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 40,
+"row": 38,
 "scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -108,4 +112,18 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Plain Text"
+}
+
+[res://Scripts/gameVolume.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
 }
