--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -18,15 +18,11 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 0,
-"folded_lines": Array[int]([32, 48, 92, 103, 106, 109, 152, 159, 163, 166, 169, 172]),
+"folded_lines": Array[int]([32, 48, 92, 103, 106, 109, 152, 159, 163, 166, 169]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 52.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 4,
-"selection_to_column": 27,
-"selection_to_line": 4,
+"row": 89,
+"scroll_position": 79.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
-"folded_lines": Array[int]([]),
+"column": 0,
+"folded_lines": Array[int]([19, 22, 28, 59, 69, 72, 76, 79]),
 "h_scroll_position": 0,
-"row": 71,
-"scroll_position": 0.0,
+"row": 17,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
-"scroll_position": 13.0,
+"row": 45,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 38,
-"scroll_position": 16.0,
+"row": 32,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -122,7 +118,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
