--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,36 +6,36 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
+dock_split_2=203
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=305
-dock_hsplit_3=-360
+dock_hsplit_3=-509
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/textures/pauseButtonHover.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Assets/", "res://Assets/textures/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/textures/Panel.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/", "res://Assets/audio/", "res://Assets/audio/effects/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn", "res://Scenes/menuButtons.tscn")
-current_scene="res://Scenes/main.tscn"
-center_split_offset=-252
-selected_default_debugger_tab_idx=1
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn", "res://Scenes/menuButtons.tscn", "res://Scenes/intro.tscn")
+current_scene="res://Scenes/customer.tscn"
+center_split_offset=-288
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/customer.gd", "res://Scripts/gameVolume.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/menuButtons.gd", "res://README.md", "res://Scripts/ui.gd"]
-selected_script="res://Scripts/main.gd"
+open_scripts=["res://Scripts/customer.gd", "res://Scripts/gameVolume.gd", "res://Scripts/intro.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/menuButtons.gd", "res://README.md", "res://Scripts/ui.gd"]
+selected_script="res://Scripts/customer.gd"
 open_help=["@GlobalScope", "BaseButton"]
 script_split_offset=187
 list_split_offset=0
