level system, icons, integrity

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/textures/Panel.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/", "res://Assets/audio/", "res://Assets/audio/effects/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/textures/PanelBig.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Assets/", "res://Assets/textures/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn", "res://Scenes/menuButtons.tscn", "res://Scenes/intro.tscn")
-current_scene="res://Scenes/customer.tscn"
-center_split_offset=-288
+open_scenes=PackedStringArray("res://Scenes/customer.tscn", "res://Scenes/menuButtons.tscn", "res://Scenes/main.tscn")
+current_scene="res://Scenes/menuButtons.tscn"
+center_split_offset=-340
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/customer.gd", "res://Scripts/gameVolume.gd", "res://Scripts/intro.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/menuButtons.gd", "res://README.md", "res://Scripts/ui.gd"]
-selected_script="res://Scripts/customer.gd"
-open_help=["@GlobalScope", "BaseButton"]
+open_scripts=["res://Scripts/customer.gd", "res://Scripts/gameVolume.gd", "res://Scripts/intro.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/menuButtons.gd"]
+selected_script="res://Scripts/menuButtons.gd"
+open_help=[]
 script_split_offset=187
 list_split_offset=0
 zoom_factor=1.0
