--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
-"folded_lines": Array[int]([31, 44, 110, 181, 199, 206, 254, 261, 265, 268, 271, 274, 277, 280, 283, 286]),
+"column": 21,
+"folded_lines": Array[int]([31, 44, 110, 136, 180, 198, 205, 253, 261, 265, 268, 271, 274, 277, 280, 283, 286]),
 "h_scroll_position": 0,
-"row": 283,
-"scroll_position": 151.0,
+"row": 177,
+"scroll_position": 95.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,7 +77,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 33,
-"scroll_position": 10.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,10 +87,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 24,
 "scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
