--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -18,25 +18,25 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Assets/buttonStyleBoxTheme.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/audio/", "res://Assets/audio/voices/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/intro.tscn")
-current_scene="res://Scenes/intro.tscn"
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/menuButtons.tscn")
+current_scene="res://Scenes/main.tscn"
 center_split_offset=-340
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/customer.gd", "res://Scripts/gameVolume.gd", "res://Scripts/intro.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/menuButtons.gd"]
-selected_script="res://Scripts/intro.gd"
-open_help=[]
+selected_script=""
+open_help=["AnimationPlayer"]
 script_split_offset=187
 list_split_offset=0
 zoom_factor=1.0
