buttons, level integrity

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
-"folded_lines": Array[int]([31, 44, 110, 136, 180, 198, 205, 253, 261, 265, 268, 271, 274, 277, 280, 283, 286]),
+"column": 52,
+"folded_lines": Array[int]([31, 44, 77, 97, 110, 120, 170, 180, 198, 205, 253, 261, 265, 268, 271, 274, 277, 280, 283, 286]),
 "h_scroll_position": 0,
-"row": 177,
-"scroll_position": 95.0,
+"row": 152,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 25,
 "folded_lines": Array[int]([82]),
 "h_scroll_position": 0,
-"row": 110,
-"scroll_position": 106.0,
-"selection": false,
+"row": 23,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 23,
+"selection_to_column": 25,
+"selection_to_line": 23,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 43,
-"scroll_position": 21.0,
+"row": 7,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
