object sizes, ghost material fix

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 52,
-"folded_lines": Array[int]([31, 44, 77, 97, 110, 120, 170, 180, 198, 205, 253, 261, 265, 268, 271, 274, 277, 280, 283, 286]),
+"column": 82,
+"folded_lines": Array[int]([31, 44, 77, 97, 110, 120, 136, 170, 207, 255, 263, 267, 270, 273, 276, 279, 282, 285, 288]),
 "h_scroll_position": 0,
-"row": 152,
-"scroll_position": 0.0,
+"row": 201,
+"scroll_position": 78.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
