--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 82,
-"folded_lines": Array[int]([31, 44, 77, 97, 110, 120, 136, 170, 207, 255, 263, 267, 270, 273, 276, 279, 282, 285, 288]),
+"column": 8,
+"folded_lines": Array[int]([87, 120, 130, 146, 180, 217, 273, 277, 280, 290, 293, 296, 299]),
 "h_scroll_position": 0,
-"row": 201,
-"scroll_position": 78.0,
+"row": 288,
+"scroll_position": 142.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 14,
 "folded_lines": Array[int]([82]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 13,
-"selection_from_line": 23,
-"selection_to_column": 25,
-"selection_to_line": 23,
+"row": 118,
+"scroll_position": 106.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,12 +73,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 5,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 5,
+"selection_to_column": 19,
+"selection_to_line": 5,
 "syntax_highlighter": "GDScript"
 }
 
@@ -91,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 0.0,
+"row": 18,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -136,7 +136,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
