--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,29 +17,29 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/ghostMeshMaterialtres.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/textures/characters/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn")
-current_scene="res://Scenes/customer.tscn"
-center_split_offset=-490
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/customer.tscn", "res://Scenes/menuButtons.tscn", "res://Scenes/intro.tscn")
+current_scene="res://Scenes/menuButtons.tscn"
+center_split_offset=-327
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/customer.gd", "res://Scripts/intro.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/menuButtons.gd"]
-selected_script="res://Scripts/customer.gd"
+selected_script="res://Scripts/menuButtons.gd"
 open_help=[]
 script_split_offset=187
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=0.941176
 
 [ShaderEditor]
 
