--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/how_to.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/menuButtons.tscn", "res://Scenes/intro.tscn")
-current_scene="res://Scenes/menuButtons.tscn"
+current_scene="res://Scenes/main.tscn"
 center_split_offset=-327
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/customer.gd", "res://Scripts/intro.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/menuButtons.gd"]
-selected_script="res://Scripts/menuButtons.gd"
+selected_script="res://Scripts/main.gd"
 open_help=[]
 script_split_offset=187
 list_split_offset=0
